--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,14 @@ services:
       - 11434:11434
     volumes:
       - ollama:/root/.ollama
+    environment:
+      - OLLAMA_HOST=0.0.0.0
+      - OLLAMA_ORIGINS=*
+      - OLLAMA_TIMEOUT=600s
+      - OLLAMA_KEEP_ALIVE=10m
+      - OLLAMA_NUM_THREAD=4
+      - OLLAMA_CONTEXT_LENGTH=4096
+      - OLLAMA_BATCH_SIZE=512
     entrypoint: >
       /bin/sh -c "
       ollama serve &
