--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,17 +17,22 @@ services:
     environment:
       - OLLAMA_HOST=0.0.0.0
       - OLLAMA_ORIGINS=*
-      - OLLAMA_TIMEOUT=600s
-      - OLLAMA_KEEP_ALIVE=10m
-      - OLLAMA_NUM_THREAD=4
-      - OLLAMA_CONTEXT_LENGTH=4096
-      - OLLAMA_BATCH_SIZE=512
+      - OLLAMA_TIMEOUT=900s
+      - OLLAMA_KEEP_ALIVE=15m
+      - OLLAMA_NUM_THREAD=2
+      - OLLAMA_CONTEXT_LENGTH=2048
+      - OLLAMA_BATCH_SIZE=256
       - OLLAMA_DEBUG=1
+      - OLLAMA_GPU_LAYERS=0
+    deploy:
+      resources:
+        limits:
+          memory: 6G
     entrypoint: >
       /bin/sh -c "
       ollama serve &
       sleep 5 &&
-      ollama pull qwen2.5:7b-instruct &&
+      ollama pull tinyllama &&
       wait
       "
 
@@ -70,11 +75,14 @@ services:
       - API_HOST=0.0.0.0
       - API_PORT=8000
       - LOG_LEVEL=debug
+      - ENABLE_CSS_SHAPE_CONVERT=false
       # Ollama Support:
       - LLM_KEY=OLLAMA
       - ENABLE_OLLAMA=true
-      - OLLAMA_MODEL=qwen2.5:7b-instruct
+      - OLLAMA_MODEL=tinyllama
       - OLLAMA_SERVER_URL=http://ollama:11434
+      - OLLAMA_FORMAT=json
+      - OLLAMA_TEMPERATURE=0.1
     depends_on:
       postgres:
         condition: service_healthy
